# marine-generator-cpp-engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PROTOCOL.md  README.md  build.bat  build.sh  example_client.py
include/: Generator.h  Sensors.h  SimpleJSON.h
src/: Generator.cpp  Sensors.cpp  main.cpp
